<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorContentBG">

    <LinearLayout
        android:id="@+id/rel_Layout1"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/colorContentBG">
        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:text="@string/info_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rel_Layout2"
        android:layout_below="@+id/rel_Layout1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:weightSum="90"
        android:background="@color/colorTable">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:text="@string/column_one"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:text="@string/column_two"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:text="@string/column_three"/>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/rel_Layout3"
        android:layout_below="@+id/rel_Layout2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorTable">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:dividerHeight="2dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/rel_Layout4"
        android:layout_below="@+id/rel_Layout3"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="50dp"
        android:background="@color/colorContentBG">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:background="@color/colorButton"
            android:text="@string/Share_btn_name"
            android:id="@+id/btnShare"/>
    </LinearLayout>


</RelativeLayout>